# ppocrv5-kleidiAI-appleM4

./: .gitignore  AGENTS.md  README.md  README_CN.md  ppocrv5_onnx.py  pyproject.toml  repro_igemm_regression.py
benchmarks/: benchmark_unified.py  compare_results.py
docs/: ACCURACY_ALIGNMENT.md  BENCHMARK_RESULTS.md  PIPELINE_ARCHITECTURE.md  SME_THREAD_SCALING.md
examples/: quickstart.py
models/: README.md
results/: ort_1.21.1.json  ort_1.21.1_t1.json  ort_1.21.1_t2.json  ort_1.23.2.json  ort_1.24.3.json  ort_1.24.3_no_kleidiai.json  ort_1.24.3_t1.json  ort_1.24.3_t2.json  ort_1.24.3_t2_no_kleidiai.json  paddle_3.3.0.json
scripts/: download_models.py
