[project]
name = "ppocrv5-kleidiAI-appleM4"
version = "1.0.0"
description = "PP-OCRv5 ONNX Runtime inference pipeline for ARM with KleidiAI acceleration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "onnxruntime>=1.21.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pyclipper>=1.3.0",
]

[project.optional-dependencies]
paddle = ["paddlepaddle>=3.3.0"]
